# Copyright 2023 by Alex Utter

[package]
name = "AdventOfCode2017"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.*", features = ["blocking"] }

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"
