[package]
name = "AdventOfCode2020"
version = "0.1.0"
authors = ["Alex Utter <ooterness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"

[[bin]]
name = "advent_2020"
path = "src/main.rs"
