[package]
name = "AdventOfCode2021"
version = "0.1.0"
authors = ["Alex Utter <ooterness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.*"

[[bin]]
name = "advent_2021"
path = "src/main.rs"
